--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "d3-scale": "^4.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
+    "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
